# zmq-proxy

./: .travis.yml  README.md  build  build.sh  build_release  build_ubuntu.sh  install_deps_ubuntu.sh
src/: CMakeLists.txt
src/common/: configuration.cpp  configuration.h  matchmaker.cpp  matchmaker.h  matchmaker_redis.cpp  matchmaker_redis.h  names.h  utils.cpp  utils.h
src/logging/: logging.h  logging_init.h
src/proxy/: centralproxy.cpp  centralproxy.h  localproxy.cpp  localproxy.h  main.cpp
